--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
 <body>
     <H1>EPPP PZULO BARBOSA LEITE<H1>
 
-        <a href="C:\xampp\img">
-</body>
+    <img src="C:\xampp\htdocs\jose\img.roblox\">
 </html>
