--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <body>
     <H1>EPPP PZULO BARBOSA LEITE<H1>
 
-    <img src="C:\xampp\htdocs\jose\img.roblox\">
+    <img src="img/1.jpg" alt="img">
 </html>
